fixed overflow on iphone

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -230,6 +230,9 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  overflow: auto;
+  height: 100%;
+  padding-bottom: 40px;
   opacity: 0;
   transform: translateX(100%);
   transition: transform 333ms, opacity 333ms; }
